[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["elm"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]

[tool.pydocstyle]
convention = "google"
add-ignore = "D10"

[project]
name = "ELM"
description = "Evolution Through Large Models"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dynamic = ["version", "dependencies"]
classifiers=[
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Operating System :: Unix",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pydocstyle",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
]
