[tool.isort]
profile = "black"

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]


[tool.pydocstyle]
convention = "google"
add-ignore = "D10, D212"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rA --doctest-modules --color=yes" # --cov=openelm"  # Uncomment this for coverage by default
testpaths = ["tests"]
doctest_optionflags = ["NORMALIZE_WHITESPACE", "IGNORE_EXCEPTION_DETAIL"]

[project]
name = "OpenELM"
description = "Evolution Through Large Models"
authors = [{name = "CarperAI"}]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dynamic = ["version", "dependencies"]
classifiers=[
    # Trove classifiers
    # Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
    "Operating System :: Unix",
]

[project.optional-dependencies]
dev = [
    "black",
    "isort",
    "flake8",
    "pydocstyle",
    "mypy",
    "pre-commit",
    "pytest",
    "pytest-cov",
]
tinygp = [
    "pygraphviz",
    "graphviz"
]
notebook = ["ipython"]
